--- a/requirements.txt
+++ b/requirements.txt
@@ -57,7 +57,7 @@ monotonic==1.6
 mpmath==1.3.0
 multidict==6.1.0
 networkx==3.4.2
-numpy==2.2.2
+numpy==1.24.4
 nvidia-cublas-cu12==12.4.5.8
 nvidia-cuda-cupti-cu12==12.4.127
 nvidia-cuda-nvrtc-cu12==12.4.127
@@ -139,3 +139,4 @@ wrapt==1.17.2
 yarl==1.18.3
 zipp==3.21.0
 zstandard==0.23.0
+huggingface_hub[hf_xet]
